[package]
name = "rusty_boy"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3

[dependencies]
env_logger = { version = "0.11.5" }
log = { version = "0.4.22"}
web-sys = { version = "0.3.70", features = ["Window", "Performance"] , optional = true }
wasm-bindgen = { version = "0.2.93", optional = true }

[features]
wasm = ["web-sys", "wasm-bindgen"]
