[package]
name = "rusty_boy"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3

[dependencies]
web-sys = { version = "0.3.70", features = ["Window", "Performance"] , optional = true }
wasm-bindgen = { version = "0.2.93", optional = true }

[features]
wasm = ["web-sys", "wasm-bindgen"]
